Big push
- Reorganize file structure

- dictionarySearcher to DictionaryManager
- add wordExportToFile DictionaryManager

- add inputSearch in InputHandle

- create class InterfaceInputHandle

- add controllers class for controll window event

- add css, fxml