@@ -5,6 +5,7 @@ import javazoom.jl.player.Player;
 
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -17,7 +18,18 @@ public class TextToSpeechAPI {
     private static Scanner scn = new Scanner(System.in);
 
     public static void textToSpeech() {
-        String apiUrl = getApiUrl();
+        String sentence = "";
+        System.out.print("""
+                        Text to speech.
+                        Press ENTER when finish typing
+                        
+                        Sentence:\s""");
+        try {
+            sentence = scn.nextLine();
+        } catch (NullPointerException n) {
+            n.printStackTrace();
+        }
+        String apiUrl = getApiUrl(sentence);
         playAudio(apiUrl);
         while (true) {
             System.out.println("""
@@ -33,23 +45,19 @@ public class TextToSpeechAPI {
         }
     }
 
-    private static String getApiUrl() {
-        String sentence = "";
-        System.out.print("""
-                        Text to speech.
-                        Press ENTER when finish typing
-                        
-                        Sentence:\s""");
+    public static void textToSpeech(String sentence) {
         try {
-            sentence = scn.nextLine();
-        } catch (NullPointerException n) {
-            n.printStackTrace();
+            playAudio(getApiUrl(sentence));
+        } catch (Exception ignore) {
         }
-        String detectL = TranslateAPI.detectLanguage(sentence);
+    }
+
+    public static String getApiUrl(String sentence) {
+        //String detectL = TranslateAPI.detectLanguage(sentence);
         String apiUrl = "";
         try {
              apiUrl = "https://translate.google.com/translate_tts?ie=UTF-8&tl="
-                     + detectL
+                     + "en"
                      + "&client=tw-ob&q="
                      + URLEncoder.encode(sentence, StandardCharsets.UTF_8);
         } catch (Exception e) {
@@ -61,13 +69,12 @@ public class TextToSpeechAPI {
 
     private static void playAudio(String api) {
         try {
-            URL url = new URL(api);
+            URI uri = new URI(api);
+            URL url = uri.toURL();
             HttpURLConnection con = (HttpURLConnection) url.openConnection();
             InputStream audio = con.getInputStream();
             new Player(audio).play();
-            con.disconnect();
-        } catch (Exception e) {
-            e.printStackTrace();
+        } catch (Exception ignore) {
         }
     }
 }
